--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,7 +6,7 @@
   }
 
 .searchContainer{
-    background-image: url("https://tyrelineaustralia.com.au/wp-content/uploads/2021/07/Slider-1.jpg");
+    background:linear-gradient(40deg, rgba(26, 25, 25, 0.6), rgba(250, 250, 250, 0.9)), url("https://tyrelineaustralia.com.au/wp-content/uploads/2021/07/Slider-1.jpg");
     background-size: cover;
     background-position: center ;
     min-height: 400px;
@@ -14,4 +14,27 @@
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.searchBoxInner{
+  background-color: rgba(255, 255, 255, 0.466);
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchButton{
+  width: 100%;
+  height: 50px;
+}
+
+.HScrollContainer{
+  min-height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:linear-gradient(40deg, rgba(26, 25, 25, 0.6), rgba(99, 99, 99, 0.3)), url("https://tyrelineaustralia.com.au/wp-content/uploads/2021/06/ROADBIB-Cover.jpg");
+  background-size: cover;
+  background-position: center ;
 }
